--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8899
 spring.datasource.username=root
-spring.datasource.password=ErKaleNWOHw7go6B
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/COVID19?serverTimezone=GMT
 mybatis.configuration.map-underscore-to-camel-case=true
